[project]
name = ""
version = "0.0.1"
requires-python = "==3.14.3"
dependencies = [
    "pytest==9.0.2",
    "pytest-bdd==8.1.0",
    "requests==2.33.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "rope==1.14.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
