[project]
name = ""
version = "0.0.1"
requires-python = "==3.14.5"
dependencies = [
    "pytest==9.0.3",
    "pytest-bdd==8.1.0",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "rope==1.14.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
