[project]
name = "bdd-pytest"
version = "0.0.1"
requires-python = "==3.14.6"
dependencies = [
    "pytest==9.1.0",
    "pytest-bdd==8.1.0",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "rope==1.14.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
